removed clearpage before list of figures

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -15,7 +15,8 @@
 %*******************************************************
 % List of Figures and of the Tables
 %*******************************************************
-\clearpage
+% \clearpage
+\vspace{100pt}
 
 \begingroup 
     \let\clearpage\relax
