--- a/vbajpai-thesis.tex
+++ b/vbajpai-thesis.tex
@@ -41,23 +41,27 @@
 % \ctparttext{\input{sections/motivation.tex}}
 % \part{Motivation}
 
-\cleardoublepage
-\ctparttext{\input{sections/work-plan.tex}}
-\part{Work Plan}
+%\cleardoublepage
+%\ctparttext{\input{sections/work-plan.tex}}
+%\part{Work Plan}
 
-% \cleardoublepage
-% \ctparttext{\input{sections/implementation-and-evaluation.tex}}
-% \part{Implementation and Evaluation}
-% \include{chapters/implementation-and-evaluation/design}
-% \include{chapters/implementation-and-evaluation/implementation}
-% \include{chapters/implementation-and-evaluation/performance-evaluation}
-% \include{chapters/implementation-and-evaluation/future-work}
-% \include{chapters/implementation-and-evaluation/conclusion}
-% 
-\appendix
 \cleardoublepage
+\ctparttext{\input{sections/implementation-and-evaluation.tex}}
+\part{Implementation and Evaluation}
+\include{chapters/implementation-and-evaluation/design}
+\include{chapters/implementation-and-evaluation/implementation}
+\include{chapters/implementation-and-evaluation/performance-evaluation}
+\include{chapters/implementation-and-evaluation/future-work}
+\include{chapters/implementation-and-evaluation/conclusion}
+
+\cleardoublepage
+\appendix
+\ctparttext{\input{sections/appendix.tex}}
 \part{Appendix}
-\include{chapters/appendix}
+\include{chapters/appendix/installation}
+\include{chapters/appendix/silk}
+\include{chapters/appendix/releases}
+\include{chapters/appendix/acronyms}
 \include{frontback/bibliography}
-% \include{frontback/declaration}
+\include{frontback/declaration}
 \end{document}
