flowy parser and f(v1) engine analysis   * compilation and runtime issues   * missing pipeline stages, hardcoded rules, assumptions   * reverse engineering   * arguments parsing in parser   * minor refactor

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -925,6 +925,18 @@ ISSN={1542-1201},
   url = {http://ilpubs.stanford.edu:8090/422/},
 }
 
+@techreport{c99:1999,
+    author = {{ISO}},
+    institution = {ISO/IEC},
+    keywords = {c-language, foundation},
+    number = {WG14 N1124},
+    posted-at = {2008-06-09 09:33:44},
+    priority = {0},
+    title = {The {ANSI} C standard (C99)},
+    url = {http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1124.pdf},
+    year = {1999}
+}
+
 @article{yyang:1997,
 	author = {Yiming Yang and Jan O. Pedersen},
 	title = {{A Comparative Study on Feature Selection in Text Categorization}},	
