appendix   * silk elevator pitch   * silk installation instructions   * additional silk analysis and capture tools   * flow-tools to nfdump   * nfdump to silk

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,11 @@
+@misc{SiLK,
+  author = {{CERT/NetSA at Carnegie Mellon University}},
+  title = {{SiLK (System for Internet-Level Knowledge)}},
+  howpublished = {[Online]. Available:
+                  \url{http://tools.netsa.cert.org/silk}
+                  [Accessed: July 10, 2012]}}
+}
+
 @manual{tcpdump-manpage,
   author = {Jacobson, Van and Leres, Craig and McCanne, Steven},
   title = {{tcpdump - dump traffic on a network}},
@@ -20,53 +28,53 @@
 }
 
 @manual{dell-userguide,
-  title={{Dell PowerConnect M6220, M6348, M8024, 
+  title={{Dell PowerConnect M6220, M6348, M8024,
 					and M8024‑k Switch User’s Configuration Guide}},
   organization= {Dell},
   address = {Texas}
 }
 
 @unpublished{jschauer:2012,
- author = {Schauer, Johannes and Melnikov, Nikolay and 
+ author = {Schauer, Johannes and Melnikov, Nikolay and
 		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{F}},
  year = {2012},
 }
 
 @unpublished{vbajpai:2012,
- author = {Bajpai, Vaibhav and Melnikov, Nikolay and 
+ author = {Bajpai, Vaibhav and Melnikov, Nikolay and
 		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{Automated Failure Identification under IPv6 Transition Mechanisms}},
  year = {2012},
 }
 
 @article{btrammell:2011,
-author={Trammell, B. and Boschi, E.}, 
-journal={Communications Magazine, IEEE}, 
-title={{An Introduction to IP Flow Information Export (IPFIX)}}, 
-year={2011}, 
-month={april }, 
-volume={49}, 
-number={4}, 
-pages={89 -95}, 
-keywords={Cisco NetFlow version 9;IP flow information export;IP networks;IPFIX;network management;network monitoring;protocol;IP networks;protocols;}, 
-doi={10.1109/MCOM.2011.5741152}, 
+author={Trammell, B. and Boschi, E.},
+journal={Communications Magazine, IEEE},
+title={{An Introduction to IP Flow Information Export (IPFIX)}},
+year={2011},
+month={april },
+volume={49},
+number={4},
+pages={89 -95},
+keywords={Cisco NetFlow version 9;IP flow information export;IP networks;IPFIX;network management;network monitoring;protocol;IP networks;protocols;},
+doi={10.1109/MCOM.2011.5741152},
 ISSN={0163-6804},
 }
 
 @inproceedings{lderi:2011,
-author={Deri, L. and Chou, E. and Cherian, Z. 
-				and Karmarkar, K. and Patterson, M.}, 
+author={Deri, L. and Chou, E. and Cherian, Z.
+				and Karmarkar, K. and Patterson, M.},
 booktitle={Network and Service Management (CNSM), 2011
- 					 7th International Conference on}, 
-title={{Increasing Data Center Network Visibility with Cisco NetFlow-Lite}}, 
-year={2011}, 
-month={oct.}, 
-volume={}, 
-number={}, 
-pages={1 -6}, 
-keywords={Catalyst 4948E switches;Cisco NetFlow-Lite;IP address;IP traffic information;TCP ports;UDP ports;anomaly detection;byte counts;capacity planning;custom ASIC;data center network visibility;de-facto protocol;high-speed network monitoring;nProbe;network troubleshooting;packet categorization;packet forwarding;IP networks;computer network security;telecommunication switching;telecommunication traffic;transport protocols;}, 
-doi={}, 
+ 					 7th International Conference on},
+title={{Increasing Data Center Network Visibility with Cisco NetFlow-Lite}},
+year={2011},
+month={oct.},
+volume={},
+number={},
+pages={1 -6},
+keywords={Catalyst 4948E switches;Cisco NetFlow-Lite;IP address;IP traffic information;TCP ports;UDP ports;anomaly detection;byte counts;capacity planning;custom ASIC;data center network visibility;de-facto protocol;high-speed network monitoring;nProbe;network troubleshooting;packet categorization;packet forwarding;IP networks;computer network security;telecommunication switching;telecommunication traffic;transport protocols;},
+doi={},
 ISSN={},
 }
 
@@ -83,7 +91,7 @@ ISSN={},
 
 @inproceedings{rbeverly:2011,
   author = {Kakavelakis, Georgios and Beverly, Robert and Young, Joel},
-	title = {{Auto-learning of {SMTP} {TCP} 
+	title = {{Auto-learning of {SMTP} {TCP}
 					 Transport-Layer Features for Spam and Abusive Message Detection}},
   address = {Berkeley, CA, USA},
   booktitle = {LISA 2011, 25th Large Installation
@@ -150,17 +158,17 @@ ISSN={},
 }
 
 @inproceedings{vperelman:2011,
-author={Perelman, Vladislav and Melnikov, Nikolay 
-				and Sch\"{o}nw\"{a}lder, J\"{u}rgen}, 
-booktitle={Integrated Network Management (IM), 2011 IFIP/IEEE International Symposium on}, 
-title={{Flow signatures of Popular Applications}}, 
-year={2011}, 
-month={May}, 
-volume={}, 
-number={}, 
-pages={9 -16}, 
-keywords={Web browser;configuration error;flow signature;hardware failure;intrusion attempt;mail client;media-player;network flow data;network flow traces;protocol mix;router;software failure;stream-based flow query language;digital signatures;online front-ends;protocols;query languages;security of data;system recovery;telecommunication network routing;telecommunication security;}, 
-doi={10.1109/INM.2011.5990668}, 
+author={Perelman, Vladislav and Melnikov, Nikolay
+				and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+booktitle={Integrated Network Management (IM), 2011 IFIP/IEEE International Symposium on},
+title={{Flow signatures of Popular Applications}},
+year={2011},
+month={May},
+volume={},
+number={},
+pages={9 -16},
+keywords={Web browser;configuration error;flow signature;hardware failure;intrusion attempt;mail client;media-player;network flow data;network flow traces;protocol mix;router;software failure;stream-based flow query language;digital signatures;online front-ends;protocols;query languages;security of data;system recovery;telecommunication network routing;telecommunication security;},
+doi={10.1109/INM.2011.5990668},
 ISSN={},
 }
 
@@ -183,16 +191,16 @@ ISSN={},
 }
 
 @article{sbehnel:2011,
-author={Behnel, S. and Bradshaw, R. and Citro, C. and Dalcin, L. and Seljebotn, D.S. and Smith, K.}, 
-journal={Computing in Science Engineering}, 
-title={{Cython: The Best of Both Worlds}}, 
-year={2011}, 
-month={march-april}, 
-volume={13}, 
-number={2}, 
-pages={31 -39}, 
-keywords={Cython language;Fortran code;Python language extension;numerical loops;programming language;C language;numerical analysis;}, 
-doi={10.1109/MCSE.2010.118}, 
+author={Behnel, S. and Bradshaw, R. and Citro, C. and Dalcin, L. and Seljebotn, D.S. and Smith, K.},
+journal={Computing in Science Engineering},
+title={{Cython: The Best of Both Worlds}},
+year={2011},
+month={march-april},
+volume={13},
+number={2},
+pages={31 -39},
+keywords={Cython language;Fortran code;Python language extension;numerical loops;programming language;C language;numerical analysis;},
+doi={10.1109/MCSE.2010.118},
 ISSN={1521-9615},
 }
 
@@ -223,8 +231,8 @@ ISSN={1521-9615},
  author = {Wang, Shaonan and State, Radu and
  					 Ourdane, Mohamed and Engel, Thomas},
  title = {{FlowRank: Ranking NetFlow Records}},
- booktitle = {Proceedings of the 6th International 
-							Wireless Communications and Mobile 
+ booktitle = {Proceedings of the 6th International
+							Wireless Communications and Mobile
 							Computing Conference},
  series = {IWCMC '10},
  year = {2010},
@@ -237,7 +245,7 @@ ISSN={1521-9615},
  acmid = {1815508},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {NeFlow monitoring, dependency graphs, 
+ keywords = {NeFlow monitoring, dependency graphs,
 						 network traffic visualization},
 }
 
@@ -258,7 +266,7 @@ ISSN={1521-9615},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {flow-level data, https traffic, traffic classification, webmail},
-} 
+}
 
 @mastersthesis{nmelnikov:thesis:2010,
 author = {Melnikov, Nikolay},
@@ -297,17 +305,17 @@ year = {2010},
 }
 
 @inproceedings{kshvachko:2010,
-author={Shvachko, K. and Hairong Kuang and Radia, S. and Chansler, R.}, 
+author={Shvachko, K. and Hairong Kuang and Radia, S. and Chansler, R.},
 booktitle={Mass Storage Systems and Technologies (MSST), 2010 IEEE 26th
- 					 Symposium on}, 
-title={{The Hadoop Distributed File System}}, 
-year={2010}, 
-month={May}, 
-volume={}, 
-number={}, 
-pages={1 -10}, 
-keywords={Hadoop distributed file system;Yahoo!;data storage;data stream;enterprise data;Internet;distributed databases;network operating systems;}, 
-doi={10.1109/MSST.2010.5496972}, 
+ 					 Symposium on},
+title={{The Hadoop Distributed File System}},
+year={2010},
+month={May},
+volume={},
+number={},
+pages={1 -10},
+keywords={Hadoop distributed file system;Yahoo!;data storage;data stream;enterprise data;Internet;distributed databases;network operating systems;},
+doi={10.1109/MSST.2010.5496972},
 ISSN={},
 }
 
@@ -332,11 +340,11 @@ ISSN={},
 }
 
 @inproceedings{kkanev:2010,
- author = {Kanev, Kaloyan and Melnikov, Nikolay and 
+ author = {Kanev, Kaloyan and Melnikov, Nikolay and
 		   Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{Implementation of a stream-based IP flow record query language}},
- booktitle = {Proceedings of the Mechanisms for autonomous management of 
-			  networks and services, and 4th international conference on 
+ booktitle = {Proceedings of the Mechanisms for autonomous management of
+			  networks and services, and 4th international conference on
 			  Autonomous infrastructure, management and security},
  series = {AIMS'10},
  year = {2010},
@@ -349,7 +357,7 @@ ISSN={},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
  keywords = {flow query language, netflow, network monitoring},
-} 
+}
 
 @misc{rfc5476,
   author="B. Claise and A. Johnson and J. Quittek",
@@ -365,7 +373,7 @@ ISSN={},
 }
 
 @misc{rfc5475,
-  author="T. Zseby and M. Molina and 
+  author="T. Zseby and M. Molina and
 					N. Duffield and S. Niccolini and F. Raspall",
   title="{Sampling and Filtering Techniques for IP Packet Selection}",
   series="Request for Comments",
@@ -420,7 +428,7 @@ ISSN={},
 }
 
 @inproceedings{wilbers:2009,
-  author = {Wilbers, Ilmar and Langtangen, 
+  author = {Wilbers, Ilmar and Langtangen,
 						Hans Petter and {\O}deg{\r a}rd, {\r A}smund},
   title = {{Using Cython to Speed up Numerical Python Programs}},
   year = {2009},
@@ -463,8 +471,8 @@ ISSN={},
 @inproceedings{vmarinov:2009,
  author = {Marinov, Vladislav and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{Design of a Stream-Based IP Flow Record Query Language}},
- booktitle = {Proceedings of the 20th IFIP/IEEE International Workshop on 
-			  Distributed Systems: Operations and Management: Integrated 
+ booktitle = {Proceedings of the 20th IFIP/IEEE International Workshop on
+			  Distributed Systems: Operations and Management: Integrated
 			  Management of Systems, Services, Processes and People in IT},
  series = {DSOM '09},
  year = {2009},
@@ -478,7 +486,7 @@ ISSN={},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
  keywords = {IPFIX, NetFlow, Network measurement},
-} 
+}
 
 @misc{rfc5246,
   author="T. Dierks and E. Rescorla",
@@ -497,7 +505,7 @@ ISSN={},
 @inproceedings{rbeverly:2008,
   author = {Robert Beverly and Karen Sollins},
   title = {{Exploiting Transport-Level Characteristics of Spam}},
-  booktitle = {{Proceedings of the Fifth Conference on 
+  booktitle = {{Proceedings of the Fifth Conference on
 							  Email and Anti-Spam ({CEAS})}},
   month = aug,
   year = 2008
@@ -522,7 +530,7 @@ ISSN={},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {ethernet switch, flow-based, virtualization},
-} 
+}
 
 @techreport{draft-cheshire-nat-pmp-03,
 	address = {Fremont, CA, USA},
@@ -543,7 +551,7 @@ ISSN={},
 
 @misc{rfc5101,
   author="B. Claise",
-  title="{Specification of the IP Flow Information 
+  title="{Specification of the IP Flow Information
 					Export (IPFIX) Protocol for the Exchange
 					of IP Traffic Flow Information}",
   series="Request for Comments",
@@ -606,7 +614,7 @@ ISSN={},
 @inproceedings{kchen:2007,
  author = {Chen, Kuan-Ta and Hong, Li-Wen},
  title = {{User identification based on Game-Play Activity Patterns}},
- booktitle = {Proceedings of the 6th ACM SIGCOMM workshop on Network and System 
+ booktitle = {Proceedings of the 6th ACM SIGCOMM workshop on Network and System
 							Support for Games},
  series = {NetGames '07},
  year = {2007},
@@ -623,16 +631,16 @@ ISSN={},
 }
 
 @article{aahmed:2007,
-author={Ahmed, A.A.E. and Traore, I.}, 
-journal={IEEE Transactions on Dependable and Secure Computing}, 
-title={{A New Biometric Technology Based on Mouse Dynamics}}, 
-year={2007}, 
-month={July-Sept}, 
-volume={4}, 
-number={3}, 
-pages={165 -179}, 
-keywords={artificial neural network;biometric data flow;confusion matrix;mouse dynamics;receiver operating characteristic curve;biometrics (access control);mouse controllers (computers);neural nets;}, 
-doi={10.1109/TDSC.2007.70207}, 
+author={Ahmed, A.A.E. and Traore, I.},
+journal={IEEE Transactions on Dependable and Secure Computing},
+title={{A New Biometric Technology Based on Mouse Dynamics}},
+year={2007},
+month={July-Sept},
+volume={4},
+number={3},
+pages={165 -179},
+keywords={artificial neural network;biometric data flow;confusion matrix;mouse dynamics;receiver operating characteristic curve;biometrics (access control);mouse controllers (computers);neural nets;},
+doi={10.1109/TDSC.2007.70207},
 ISSN={1545-5971}
 }
 
@@ -672,25 +680,25 @@ ISSN={1545-5971}
 }
 
 @article{mbodlaender:2005,
-author={Bodlaender, M.P.}, 
-journal={Consumer Electronics, IEEE Transactions on}, 
-title={{UPnP 1.1 - Designing for Performance Compatibility}}, 
-year={2005}, 
-month={feb.}, 
-volume={51}, 
-number={1}, 
-pages={ 69 - 75}, 
-keywords={ Universal Plug and Play technology; network interoperability; networked consumer device;UPnP trade; 1.0 peer-2-peer home networking architecture; consumer electronics; open systems; peer-to-peer computing;}, 
-doi={10.1109/TCE.2005.1405701}, 
+author={Bodlaender, M.P.},
+journal={Consumer Electronics, IEEE Transactions on},
+title={{UPnP 1.1 - Designing for Performance Compatibility}},
+year={2005},
+month={feb.},
+volume={51},
+number={1},
+pages={ 69 - 75},
+keywords={ Universal Plug and Play technology; network interoperability; networked consumer device;UPnP trade; 1.0 peer-2-peer home networking architecture; consumer electronics; open systems; peer-to-peer computing;},
+doi={10.1109/TCE.2005.1405701},
 ISSN={0098-3063},
 }
 
 @inproceedings{tkaragiannis:2005,
- author = {Karagiannis, Thomas and Papagiannaki, 
+ author = {Karagiannis, Thomas and Papagiannaki,
 		   Konstantina and Faloutsos, Michalis},
  title = {{BLINC: Multilevel Traffic Classification in the Dark}},
- booktitle = {Proceedings of the 2005 Conference on Applications, 
-			  Technologies, Architectures, and Protocols for 
+ booktitle = {Proceedings of the 2005 Conference on Applications,
+			  Technologies, Architectures, and Protocols for
 			  Computer Communications},
  series = {SIGCOMM '05},
  year = {2005},
@@ -708,7 +716,7 @@ ISSN={0098-3063},
 
 @inproceedings{kxu:2005,
  author = {Xu, Kuai and Zhang, Zhi-Li and Bhattacharyya, Supratik},
- title = {{Profiling Internet Backbone Traffic: 
+ title = {{Profiling Internet Backbone Traffic:
 		   Behavior Models and Applications}},
  booktitle = {{Proceedings of the 2005 Conference on Applications, Technologies,
  			   Architectures, and Protocols for Computer Communications}},
@@ -728,16 +736,16 @@ ISSN={0098-3063},
 
 @inproceedings{mkim:2004,
 author={Myung-Sup Kim and Hun-Jeong Kong and Seong-Cheol Hong
- 				and Seung-Hwa Chung and Hong, J.W.}, 
-booktitle={Network Operations and Management 
-					 Symposium, 2004. NOMS 2004. IEEE/IFIP}, 
-title={{A Flow-based Method for Abnormal Network Traffic Detection}}, 
-year={2004}, 
-month={april}, 
-volume={1}, 
-number={}, 
-pages={599 -612 Vol.1}, 
-doi={10.1109/NOMS.2004.1317747}, 
+ 				and Seung-Hwa Chung and Hong, J.W.},
+booktitle={Network Operations and Management
+					 Symposium, 2004. NOMS 2004. IEEE/IFIP},
+title={{A Flow-based Method for Abnormal Network Traffic Detection}},
+year={2004},
+month={april},
+volume={1},
+number={},
+pages={599 -612 Vol.1},
+doi={10.1109/NOMS.2004.1317747},
 ISSN={1542-1201},
 }
 
@@ -773,7 +781,7 @@ ISSN={1542-1201},
  acmid = {1251264},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
-} 
+}
 
 @misc{rfc3954,
   author="B. Claise",
@@ -818,7 +826,7 @@ ISSN={1542-1201},
 
 @article{falted:2003,
  author = {Francesc Alted and Mercedes Fern\'{a}ndez-Alonso},
- title = {{PyTables: Processing And Analyzing Extremely Large Amounts Of Data In 
+ title = {{PyTables: Processing And Analyzing Extremely Large Amounts Of Data In
 		  Python}},
  year = {2003}
 }
@@ -857,7 +865,7 @@ ISSN={1542-1201},
 
 @misc{rfc3176,
   author="P. Phaal and S. Panchen and N. McKee",
-  title="{InMon Corporation's sFlow: A Method for 
+  title="{InMon Corporation's sFlow: A Method for
 					Monitoring Traffic in Switched and Routed Networks}",
   series="Request for Comments",
   number="3176",
@@ -925,7 +933,7 @@ ISSN={1542-1201},
 
 @article{yyang:1997,
 	author = {Yiming Yang and Jan O. Pedersen},
-	title = {{A Comparative Study on Feature Selection in Text Categorization}},	
+	title = {{A Comparative Study on Feature Selection in Text Categorization}},
 	year = {1997},
 	location = {http://www.scientificcommons.org/42840458},
 	publisher = {Morgan Kaufmann Publishers},
@@ -977,9 +985,9 @@ ISSN={1542-1201},
 
 @inproceedings{wroyce:1987,
  author = {Royce, W. W.},
- title = {{Managing the Development of Large 
+ title = {{Managing the Development of Large
 					 Software Systems: Concepts and Techniques}},
- booktitle = {{Proceedings of the 9th International 
+ booktitle = {{Proceedings of the 9th International
 							 Conference on Software Engineering}},
  series = {ICSE '87},
  year = {1987},
@@ -991,7 +999,7 @@ ISSN={1542-1201},
  acmid = {41801},
  publisher = {IEEE Computer Society Press},
  address = {Los Alamitos, CA, USA},
-} 
+}
 
 @article{fallen:1983,
  author = {Allen, James F.},
